Make JVM respect CPU and RAM limits.
Added as recommended in the base Docker image. See
https://hub.docker.com/_/openjdk/ for more details.